--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ params:
     - post
   featuredImageField: image
   rssFullContent: true
-  favicon: /favicon.ico
+  favicon: /img/favicon.ico
 
   footer:
     since: 2022
